--- a/feature-express-server/package.json
+++ b/feature-express-server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "feature-express-server",
+  "name": "AnthroLink",
   "version": "1.0.0",
-  "description": "hello-world app",
-  "main": "hello-world.js",
+  "description": "A project to help citizens dispose off their wastes in a responsible and efficient manner. This app will connect citizens with their nearest NGOs, recycling plants, etc to",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
