Setup mongoDB and created storage folder

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "mongodb": "^3.2.2",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
   }
