--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "mongo-client": "^0.2.1",
     "mongodb": "^3.2.2",
+    "when": "^3.7.8",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
   }
