--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "google-auth-library": "^3.1.2",
+    "googleapis": "^39.2.0",
     "mongodb": "^3.2.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0",
+    "uuid-random": "^1.0.8",
     "when": "^3.7.8",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
