--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "mongodb": "^3.2.2",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
